<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>roart</groupId>
  <!--artifactId>myweb</artifactId-->
  <artifactId>aether</artifactId>
  <!--artifactId>disksearchengine</artifactId-->
  <!--artifactId>akashic-disk-search-engine</artifactId-->
  <version>0.10-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Aether Disk Search Engine Parent</name>
  <!--name>Vaadin Web Application</name-->
  <modules>
    <module>shadow</module>
    <module>common</module>
    <module>core</module>
    <module>eureka</module>
    <module>database</module>
    <module>filesystem</module>
    <module>machinelearning</module>
    <module>searchengine</module>
    <module>web</module>
    <!--module>webr</module-->
    <module>servicemanager</module>
    <module>distribution</module>
  </modules>
  <build>
    <pluginManagement>
      <plugins>
	<plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
	  <version>${mavencompiler.version}</version>
          <configuration>
            <source>${jdk.version}</source>
            <target>${jdk.version}</target>
	    <encoding>UTF-8</encoding>
          </configuration>
	</plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
	<groupId>org.codehaus.mojo</groupId>
	<artifactId>tomcat-maven-plugin</artifactId>
	<version>1.2-SNAPSHOT</version>
	<configuration>
	  <!--url>http://192.168.1.7:8080/manager</url-->
	  <server>mytomcat</server>
	  <!--path>/mywebapp</path-->
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-war-plugin</artifactId>
	<version>2.2</version>
	<configuration>
	  <failOnMissingWebXml>false</failOnMissingWebXml>
	</configuration>
      </plugin>
      <plugin>
	<groupId>org.mortbay.jetty</groupId>
	<artifactId>jetty-maven-plugin</artifactId>
	<version>${jetty.version}</version>
      </plugin>
      <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
      </plugin>
      <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
    </plugins>
  </build>
  <dependencies>
  </dependencies>
  <properties>
    <aether.version>0.10-SNAPSHOT</aether.version>
    <mavencompiler.version>3.8.1</mavencompiler.version>
    <mavenshade.version>3.2.1</mavenshade.version>
    <maveninstall.version>2.5.2</maveninstall.version>
    <jetty.version>9.4.12.v20180830</jetty.version>
    <springboot.version>2.5.4</springboot.version>
    <springcloud.version>3.0.3</springcloud.version>
    <springcloudstarter.version>2020.0.3</springcloudstarter.version>
    <springcore.version>5.1.3.RELEASE</springcore.version>
    <eurekaclient.version>1.10.16</eurekaclient.version>
    <jdk.version>16</jdk.version>
    <junit.version>5.7.2</junit.version>
    <lucene.version>8.9.0</lucene.version>
    <solr.version>8.9.0</solr.version>
    <hbase.version>2.4.5</hbase.version>
    <cassandra.version>3.11.0</cassandra.version>
    <aws.version>1.11.460</aws.version>
    <dynamodblocal.version>1.15.0</dynamodblocal.version>
    <tika.version>1.27</tika.version>
    <mahout.version>14.1</mahout.version>
    <!-- must keep at old version for some time -->
    <mahout.spark.version>2.4.0</mahout.spark.version>
    <spark.version>3.1.2</spark.version>
    <scala.version>2.11</scala.version>
    <!-- must keep at old version for some time -->
    <kryo.version>2.21</kryo.version>
    <opennlp.version>1.9.3</opennlp.version>
    <hadoop.version>3.1.1</hadoop.version>
    <datanucleus.version>5.1.0-release</datanucleus.version>
    <jdo.version>3.0.1</jdo.version>
    <zookeeper.version>3.4.6</zookeeper.version>
    <!-- must keep at old version for some time -->
    <curator.version>2.12.0</curator.version>
    <hazelcast.version>3.12.12</hazelcast.version>
    <hazelcastclient.version>3.2.12</hazelcastclient.version>
    <snappyjava.version>1.0.4.1</snappyjava.version>
    <jackson.version>2.12.5</jackson.version>
    <httpclient.version>4.5.6</httpclient.version>
    <dbunit.dataTypeFactoryName>org.dbunit.ext.h2.H2DataTypeFactory</dbunit.dataTypeFactoryName>
    <hibernate.version>5.5.7.Final</hibernate.version>
    <hibernate.dialect>org.hibernate.dialect.H2Dialect</hibernate.dialect>
    <hibernate.hbm2ddl.auto>create</hibernate.hbm2ddl.auto>
    <h2.version>1.4.200</h2.version>
    <jdbc.groupId>com.h2database</jdbc.groupId>
    <jdbc.artifactId>h2</jdbc.artifactId>
    <jdbc.version>1.3.160</jdbc.version>
    <jdbc.driverClassName>org.h2.Driver</jdbc.driverClassName>
    <jdbc.url><![CDATA[jdbc:h2:${h2dir}]]>
    </jdbc.url>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <vaadin.version>7.6.0</vaadin.version>
    <vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
    <gwt.version>2.3.0</gwt.version>
    <gwt.plugin.version>2.2.0</gwt.plugin.version>
    <slf4j.version>1.7.32</slf4j.version>
    <ehcache.version>2.6.11</ehcache.version>
    <servlet.version>3.1.0</servlet.version>
    <!-- must keep at old version for some time -->
    <guava.version>16.0.1</guava.version>
    <commons.version>2.1.1</commons.version>
    <fastutil.version>7.0.11</fastutil.version>
    <joss.version>0.9.14</joss.version>
    <elasticsearch.version>7.14.1</elasticsearch.version>
    <apachelog.version>2.7</apachelog.version>
    <netty.version>4.1.7.Final</netty.version>
    <jaxb.version>2.3.0</jaxb.version>
    <javaxinject.version>1</javaxinject.version>
    <kafka.version>2.6.0</kafka.version>
    <pulsar.version>2.6.1</pulsar.version>
    <commons.math3.version>3.6.1</commons.math3.version>
    <commons.lang3.version>3.8.1</commons.lang3.version>
    <commons.io.version>2.11.0</commons.io.version>
    <log4j.version>1.2.17</log4j.version>
    <camel.version>3.6.0</camel.version>
    <camelactivemq.version>5.16.0</camelactivemq.version>
    <springintegration.version>5.4.0</springintegration.version>
    <springrabbit.version>2.3.1</springrabbit.version>
    <redisclient.version>3.5.1</redisclient.version>
  </properties>
  <!--repositories>
    <repository>
      <id>vaadin-addons</id>
      <url>https://maven.vaadin.com/vaadin-addons</url>
    </repository>
    <repository>
      <id>vaadin-snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
      <releases>
	<enabled>false</enabled>
      </releases>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories-->
  <pluginRepositories>
    <pluginRepository>
      <id>vaadin-snapshots</id>
      <url>https://oss.sonatype.org/content/repositories/vaadin-snapshots/</url>
      <releases>
	<enabled>false</enabled>
      </releases>
      <snapshots>
	<enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
</project>
